refactor: migrate plugin SmartPay

--- a/packages/plugins/SmartPay/src/locale/en-US.json
+++ b/packages/plugins/SmartPay/src/locale/en-US.json
@@ -1,1 +1,58 @@
-{ "messages": {} }
+{
+    "messages": {
+        "m8Ds0H": "Add SmartPay Wallet",
+        "/829fA": "Allow Mask as gas",
+        "tcHpvG": "Change Owner",
+        "BRhJyf": ["Congratulation! You’ve deployed SmartPay Wallet ", ["0"], "."],
+        "hYgDIe": "Create",
+        "I4rME/": "Create a new Mask wallet in Pop-up.",
+        "v5lIes": "Create a New Persona",
+        "74cj7m": "Create a new Persona in Pop-up.",
+        "S0CsaV": "Create a New Wallet",
+        "L9UK9K": "Create a SmartPay Wallet with your Twitter account.",
+        "7/e1up": "Create SmartPay Wallet",
+        "ighSWB": "Created successfully!",
+        "715qtO": "Current Management account",
+        "GLUC2q": "Deploy",
+        "DPfwMq": "Done",
+        "D88yeQ": "Free gas experience in Mask Network’s dApps like Lucky Drop and Tips.",
+        "yQE2r9": "Loading",
+        "If2v4h": "Lucky Drop",
+        "YwhjRx": "Manage Account",
+        "jShqGW": ["Management account of the SmartPay Wallet is ", ["owner"], "."],
+        "8b+5vw": "MASK token can be used to pay gas fee.",
+        "G1WA4m": "More efficient and simpler signature algorithms (eg. Schnorr, BLS)",
+        "9J1jHE": "Multisigs and social recovery",
+        "ubeqw+": "Network error.",
+        "1nMGEs": "Personas",
+        "vp4MqR": "Post-quantum safe signature algorithms (eg. Lamport, Winternitz)",
+        "lDgVWA": "Receive",
+        "neDg6Z": "Receives assets on Polygon Network ONLY",
+        "M7fAKv": "Scan address to receive payment",
+        "JlFcis": "Send",
+        "jdbCoK": "Set MASK tokens to pay gas fee when interacting with Polygon Network.",
+        "JphlsR": "Set up the Management Account for SmartPay Wallet",
+        "wbkdNi": "Smart Pay",
+        "tMHWyK": "SmartPay is based on ERC-4337 and is currently deployed on Polygon Network. Multiple chains will be supported in the future. ERC-4337 is a new wallet proposal that would open the door for creativity in wallet design and could provide more important features. And we will design more fascinating features based on the new wallet proposal in Mask Network.",
+        "o2Kkia": "SmartPay Wallet",
+        "nd2mj2": "SmartPay Wallet Deployment",
+        "SVo6CO": "Sorry, you are not in the free trial whitelist.",
+        "vH2C/2": "Swap",
+        "WKhaQb": "The ERC-4337 will open the door to more creativity and more important features for wallet design.",
+        "Gaq/7P": "This SmartPay Wallet can only receive assets on Polygon Network. Please do not use this address to receive assets from other EVM chains.",
+        "xY9s5E": "Timeout",
+        "em6LzM": "Transaction rejected.",
+        "amF6Yq": "Upgradeability",
+        "5KP2UY": "User cancelled the process.",
+        "zgo0BR": "User need to deploy the SmartPay Wallet on Polygon Network before using it for blockchain interaction. Wallet that has not been deployed can receive assets, but cannot send any transactions.",
+        "Mkyh69": "Users can use SmartPay Wallet (free gas fee and private key change) only on Polygon Network at the moment.",
+        "jXHtqK": "Waiting for user signature",
+        "eyQXE/": "Wallets",
+        "8yBkTu": "What is SmartPay",
+        "bxRTOG": "What is SmartPay?",
+        "Re0DcC": "What to know before SmartPay Wallet deployment:",
+        "tzlwby": "You are in the trial whitelist.",
+        "hFAVvh": "You can change management account of SmartPay Wallet. In Mask Network, both Persona and Mask Wallet can be authorized as management account.",
+        "O6SJRT": "You need to know before using SmartPay:"
+    }
+}
