--- a/packages/plugins/SmartPay/src/locale/ja-JP.json
+++ b/packages/plugins/SmartPay/src/locale/ja-JP.json
@@ -1,1 +1,58 @@
-{ "messages": {} }
+{
+    "messages": {
+        "m8Ds0H": "スマートペイウォレットを追加",
+        "/829fA": "Maskをガスとして許可する",
+        "tcHpvG": "所有者変更",
+        "BRhJyf": ["おめでとうございます！SmartPayウォレット ", ["0"], "を展開しました。"],
+        "hYgDIe": "作成",
+        "I4rME/": "ポップアップに新しいマスクウォレットを作成します。",
+        "v5lIes": "新しいペルソナを作成",
+        "74cj7m": "ポップアップで新しいペルソナを作成します。",
+        "S0CsaV": "新しいウォレットを作成する",
+        "L9UK9K": "あなたのTwitterアカウントでSmartPayウォレットを作成します。",
+        "7/e1up": "スマートペイウォレットを作成",
+        "ighSWB": "正常に作成されました",
+        "715qtO": "現在の管理アカウント",
+        "GLUC2q": "展開",
+        "DPfwMq": "完了",
+        "D88yeQ": "ラッキードロップやチップなどMask NetworkのdAppsでの無料ガス体験。",
+        "yQE2r9": "読み込み中",
+        "If2v4h": "ラッキードロップ",
+        "YwhjRx": "アカウント管理",
+        "jShqGW": ["Management account of the SmartPay Wallet is ", ["owner"], "."],
+        "8b+5vw": "MASKトークンはガス料金の支払いに使用できます。",
+        "G1WA4m": "より効率的でシンプルな署名アルゴリズム (例: Schnorr, BLS)",
+        "9J1jHE": "マルチシグと社会回復",
+        "ubeqw+": "ネットワークエラー",
+        "1nMGEs": "ペルソナ",
+        "vp4MqR": "ポスト量子安全署名アルゴリズム (例: Lamport, Winternitz)",
+        "lDgVWA": "受取",
+        "neDg6Z": "Polygonネットワークのみのアセットを受信する",
+        "M7fAKv": "アドレスをスキャンして支払いを受け取る",
+        "JlFcis": "送信",
+        "jdbCoK": "Polygon Networkとやり取りする際にガス料金を支払うようにMASKトークンを設定します。",
+        "JphlsR": "SmartPayウォレットの管理アカウントを設定する",
+        "wbkdNi": "スマートペイ",
+        "tMHWyK": "SmartPayはERC-4337に基づいており、現在Polygon Networkにデプロイされています。将来的には複数のチェーンを対応される予定です。 ERC-4337は、ウォレットデザインで創造性の扉を開き、より重要な機能を提供する新しいウォレット提案です。 マスクネットワークの新しいウォレット提案に基づいて、より魅力的な機能を設計します。",
+        "o2Kkia": "SmartPayウォレット",
+        "nd2mj2": "SmartPayウォレット配置",
+        "SVo6CO": "申し訳ありませんが、あなたは無料トライアルホワイトリストにいません。",
+        "vH2C/2": "スワップ",
+        "WKhaQb": "ERC-4337は、ウォレットデザインのためのより創造性とより重要な機能への扉を開きます。",
+        "Gaq/7P": "このSmartPayウォレットはPolygon ネットワーク上でのみアセットを受け取ることができます。他のEVMチェーンからアセットを受け取るためにこのアドレスを使用しないでください。",
+        "xY9s5E": "タイムアウト",
+        "em6LzM": "トランザクションが拒否されました。",
+        "amF6Yq": "アップグレード能力",
+        "5KP2UY": "ユーザーがプロセスをキャンセルしました。",
+        "zgo0BR": "ユーザーは、SmartPayウォレットをブロックチェーン上で使用する前に、Polygon Network上にデプロイする必要があります。デプロイされていないウォレットは、アセットを受け取ることはできますが、トランザクションを送信することはできません。",
+        "Mkyh69": "現時点ではポリゴンネットワーク上でのみSmartPayウォレット(無料のガス料金と秘密鍵の変更)をご利用いただけます。",
+        "jXHtqK": "ユーザー署名を待っています",
+        "eyQXE/": "ウォレット",
+        "8yBkTu": "SmartPayとは",
+        "bxRTOG": "SmartPayとは?",
+        "Re0DcC": "SmartPayウォレット展開前に知っておくべきこと:",
+        "tzlwby": "あなたはトライアルホワイトリストにいます。",
+        "hFAVvh": "SmartPayウォレットの管理アカウントを変更することができます。マスクネットワークでは、ペルソナとマスクウォレットの両方を管理アカウントとして認可することができます。",
+        "O6SJRT": "SmartPayを使用する前に確認してください:"
+    }
+}
