--- a/packages/plugins/Snapshot/src/locale/ja-JP.json
+++ b/packages/plugins/Snapshot/src/locale/ja-JP.json
@@ -1,1 +1,39 @@
-{ "messages": {} }
+{
+    "messages": {
+        "0jddIP": [["0"], " メンバー"],
+        "VbeIOx": "著者",
+        "gxV9O8": "投票してください",
+        "6sbLuF": "現在の結果",
+        "MQ9hQ4": "DAO",
+        "XQYg/I": "それぞれのプロジェクトまたはプロトコルのTwitterページにスナップショットの提案を表示します。",
+        "Midntl": "レポートをダウンロードする",
+        "IrI9pg": "終了日",
+        "TbaYrr": ["Ended ", ["0"]],
+        "dlgbtN": ["Ends in ", ["0"]],
+        "nSkB8g": "情報",
+        "XrH+JC": "IPFS",
+        "0wdd7X": "参加",
+        "yQE2r9": "読み込み中",
+        "eYLq1w": "Snapshot APIサービスの故障のため、読み込みに失敗します。",
+        "9oP21f": "自分の投票",
+        "+ubcPw": "パワーなし",
+        "ybuu1v": "おっと、結果が見つかりません",
+        "rVBqRS": "オプション",
+        "M9OYUo": "投票に失敗した場合はもう一度お試しください。",
+        "CP3D8G": "進捗",
+        "qcybNQ": "提案",
+        "kx0s+n": "結果",
+        "yTZe+y": "Snapshot",
+        "pOE8Vh": "スペース",
+        "WAjFYI": "開始日",
+        "j5yFkn": ["開始時刻 ", ["0"]],
+        "GyUHYJ": "ストラテジー",
+        "jpctdh": "表示",
+        "lQXQKs": "投票",
+        "przoUP": "投票一覧",
+        "eFmWrs": "投票しました",
+        "PByO0X": "投票",
+        "kWJmRL": "あなた",
+        "9q+I38": "あなたの投票力"
+    }
+}
