--- a/packages/plugins/SwitchLogo/src/locale/zh-CN.po
+++ b/packages/plugins/SwitchLogo/src/locale/zh-CN.po
@@ -17,3 +17,47 @@ msgstr ""
 "X-Crowdin-Language: zh-CN\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/SwitchLogo/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 996\n"
+
+#: src/SiteAdaptor/SwitchLogoDialog.tsx:122
+msgid "Classics Logo"
+msgstr "经典标志"
+
+#: src/SiteAdaptor/SwitchLogoDialog.tsx:87
+msgid "Download https://mask.io to try more powerful tools on Twitter."
+msgstr "下载 https://mask.io，在Twitter上尝试更强大的工具。"
+
+#: src/SiteAdaptor/SwitchLogoDialog.tsx:85
+msgid "I just replaced Twitter X logo with the original blue bird one with Mask Network extension."
+msgstr "我刚刚使用 Mask Network 插件把T witter X 图标替换成了原来的蓝鸟图标。"
+
+#: src/SiteAdaptor/SwitchLogoDialog.tsx:173
+msgid "Mask Network"
+msgstr "Mask Network"
+
+#: src/SiteAdaptor/SwitchLogoDialog.tsx:133
+msgid "New Logo"
+msgstr "新标志"
+
+#: src/SiteAdaptor/SwitchLogoDialog.tsx:170
+msgid "Powered by"
+msgstr ""
+
+#: src/SiteAdaptor/SwitchLogoDialog.tsx:161
+msgid "Save"
+msgstr "保存"
+
+#: src/SiteAdaptor/SwitchLogoDialog.tsx:153
+msgid "Share and recommend this feature after saving."
+msgstr "保存后分享并推荐此功能。"
+
+#: src/SiteAdaptor/index.tsx:9
+msgid "Switch between the classic Twitter logo and the new one."
+msgstr "在经典的 Twitter 标志和新的 X 标志之间切换。"
+
+#: src/SiteAdaptor/SwitchLogoDialog.tsx:110
+msgid "Switch Twitter Logo"
+msgstr "切换 Twitter 标志"
+
+#: src/SiteAdaptor/index.tsx:20
+msgid "Switch X Logo"
+msgstr "切换 X 标志"
