refactor: migrate plugin Tips

--- a/packages/plugins/Tips/src/locale/ja-JP.json
+++ b/packages/plugins/Tips/src/locale/ja-JP.json
@@ -1,1 +1,21 @@
-{ "messages": {} }
+{
+    "messages": {
+        "9+VwX/": "コレクティブルを追加",
+        "yz7wBu": "閉じる",
+        "znqB4T": "残高が不足しています",
+        "8Dh77Z": "NFTs",
+        "4kYy+U": "プレビュー可能なコレクションはありません。ここにコレクションを追加してください。",
+        "CMfM6C": "ガス料金が足りません",
+        "JlFcis": "送る",
+        "7ee72/": "マスクネットワークのチップ機能を使用して作者にチップを送りします。",
+        "IoAuJG": "送信中…",
+        "+E4pMq": [["0"], " ", ["1"], " チップを送信しました。"],
+        "FOu1+K": ["Sent ", ["amount"], " ", ["0"], " tips successfully."],
+        "Ko4L/B": "受け取りアドレスはコントラクトアドレスと同じです。もう一度確認してください。",
+        "RW1HJz": "受信アドレスは悪意のあるアドレスである可能性があります",
+        "x4f8pZ": "チップ",
+        "/jQctM": "宛先",
+        "6RDwJM": "トークン",
+        "Sjplg3": "エクスプローラーで表示"
+    }
+}
