--- a/packages/plugins/Tips/src/locale/en-US.json
+++ b/packages/plugins/Tips/src/locale/en-US.json
@@ -1,1 +1,21 @@
-{ "messages": {} }
+{
+    "messages": {
+        "9+VwX/": "Add Collectibles",
+        "yz7wBu": "Close",
+        "znqB4T": "Insufficient balance",
+        "8Dh77Z": "NFTs",
+        "4kYy+U": "No any collectible is available to preview. Please add your collectible here.",
+        "CMfM6C": "No Enough Gas Fees",
+        "JlFcis": "Send",
+        "7ee72/": "Send authors tips by using Mask Network’s Tips function.",
+        "IoAuJG": "Sending...",
+        "+E4pMq": ["Sent ", ["1"], " ", ["0"], " tips successfully."],
+        "FOu1+K": ["Sent ", ["amount"], " ", ["0"], " tips successfully."],
+        "Ko4L/B": "The receiving address is a contract address. Please check again.",
+        "RW1HJz": "The receiving address may be a malicious address.",
+        "x4f8pZ": "Tips",
+        "/jQctM": "To",
+        "6RDwJM": "Tokens",
+        "Sjplg3": "View on Explorer"
+    }
+}
