--- a/packages/plugins/Tips/src/locale/ja-JP.po
+++ b/packages/plugins/Tips/src/locale/ja-JP.po
@@ -17,3 +17,72 @@ msgstr ""
 "X-Crowdin-Language: ja\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/Tips/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 998\n"
+
+#: src/components/NFTSection/index.tsx:160
+msgid "Add Collectibles"
+msgstr "コレクティブルを追加"
+
+#: src/SiteAdaptor/components/TipsRealmContent/index.tsx:106
+msgid "Close"
+msgstr "閉じる"
+
+#: src/contexts/Tip/useTipValidate.ts:42
+msgid "Insufficient balance"
+msgstr "残高が不足しています"
+
+#: src/components/TipDialog.tsx:180
+msgid "NFTs"
+msgstr "NFTs"
+
+#: src/components/NFTSection/index.tsx:207
+msgid "No any collectible is available to preview. Please add your collectible here."
+msgstr "プレビュー可能なコレクションはありません。ここにコレクションを追加してください。"
+
+#: src/contexts/Tip/useTipValidate.ts:38
+msgid "No Enough Gas Fees"
+msgstr "ガス料金が足りません"
+
+#: src/components/TipDialog.tsx:126
+msgid "Send"
+msgstr "送る"
+
+#: src/SiteAdaptor/components/TipsRealmContent/index.tsx:105
+msgid "Send authors tips by using Mask Network’s Tips function."
+msgstr "マスクネットワークのチップ機能を使用して作者にチップを送りします。"
+
+#: src/components/TipDialog.tsx:125
+msgid "Sending..."
+msgstr "送信中…"
+
+#: src/components/TipDialog.tsx:142
+msgid "Sent {1} {0} tips successfully."
+msgstr "{0} {1} チップを送信しました。"
+
+#: src/components/TipDialog.tsx:143
+msgid "Sent {amount} {0} tips successfully."
+msgstr ""
+
+#: src/contexts/Tip/useRecipientValidate.ts:30
+msgid "The receiving address is a contract address. Please check again."
+msgstr "受け取りアドレスはコントラクトアドレスと同じです。もう一度確認してください。"
+
+#: src/contexts/Tip/useRecipientValidate.ts:31
+msgid "The receiving address may be a malicious address."
+msgstr "受信アドレスは悪意のあるアドレスである可能性があります"
+
+#: src/components/TipDialog.tsx:144
+#: src/components/TipDialog.tsx:176
+msgid "Tips"
+msgstr "チップ"
+
+#: src/components/RecipientSection/index.tsx:46
+msgid "To"
+msgstr "宛先"
+
+#: src/components/TipDialog.tsx:179
+msgid "Tokens"
+msgstr "トークン"
+
+#: src/components/RecipientSection/RecipientSelect.tsx:130
+msgid "View on Explorer"
+msgstr "エクスプローラーで表示"
