--- a/packages/plugins/Tips/src/locale/ko-KR.json
+++ b/packages/plugins/Tips/src/locale/ko-KR.json
@@ -1,1 +1,21 @@
-{ "messages": {} }
+{
+    "messages": {
+        "9+VwX/": "수장품 추가",
+        "yz7wBu": "닫기",
+        "znqB4T": "잔액 부족",
+        "8Dh77Z": "NFTs",
+        "4kYy+U": "미리 보기에 사용할 수 있는 수집품이 없습니다. 여기에 수집품을 추가하십시오.",
+        "CMfM6C": "가스비 부족",
+        "JlFcis": "발송",
+        "7ee72/": "마스크 네트워크의 팁 기능을 사용하여 작성자에게 팁을 보냅니다.",
+        "IoAuJG": "발송 중...",
+        "+E4pMq": [["0"], " ", ["1"], " 팁 발송 성공"],
+        "FOu1+K": ["Sent ", ["amount"], " ", ["0"], " tips successfully."],
+        "Ko4L/B": "받는 주소는 컨트랙트 주소입니다. 다시 확인해 주세요.",
+        "RW1HJz": "받는 주소는 악의적인 주소일 수 있습니다.",
+        "x4f8pZ": "팁",
+        "/jQctM": "받는 사람",
+        "6RDwJM": "토큰",
+        "Sjplg3": "Explorer에서 보기"
+    }
+}
