--- a/packages/plugins/Tips/src/locale/ko-KR.po
+++ b/packages/plugins/Tips/src/locale/ko-KR.po
@@ -17,3 +17,72 @@ msgstr ""
 "X-Crowdin-Language: ko\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/Tips/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 998\n"
+
+#: src/components/NFTSection/index.tsx:160
+msgid "Add Collectibles"
+msgstr "수장품 추가"
+
+#: src/SiteAdaptor/components/TipsRealmContent/index.tsx:106
+msgid "Close"
+msgstr "닫기"
+
+#: src/contexts/Tip/useTipValidate.ts:42
+msgid "Insufficient balance"
+msgstr "잔액 부족"
+
+#: src/components/TipDialog.tsx:180
+msgid "NFTs"
+msgstr "NFTs"
+
+#: src/components/NFTSection/index.tsx:207
+msgid "No any collectible is available to preview. Please add your collectible here."
+msgstr "미리 보기에 사용할 수 있는 수집품이 없습니다. 여기에 수집품을 추가하십시오."
+
+#: src/contexts/Tip/useTipValidate.ts:38
+msgid "No Enough Gas Fees"
+msgstr "가스비 부족"
+
+#: src/components/TipDialog.tsx:126
+msgid "Send"
+msgstr "발송"
+
+#: src/SiteAdaptor/components/TipsRealmContent/index.tsx:105
+msgid "Send authors tips by using Mask Network’s Tips function."
+msgstr "마스크 네트워크의 팁 기능을 사용하여 작성자에게 팁을 보냅니다."
+
+#: src/components/TipDialog.tsx:125
+msgid "Sending..."
+msgstr "발송 중..."
+
+#: src/components/TipDialog.tsx:142
+msgid "Sent {1} {0} tips successfully."
+msgstr "{0} {1} 팁 발송 성공"
+
+#: src/components/TipDialog.tsx:143
+msgid "Sent {amount} {0} tips successfully."
+msgstr ""
+
+#: src/contexts/Tip/useRecipientValidate.ts:30
+msgid "The receiving address is a contract address. Please check again."
+msgstr "받는 주소는 컨트랙트 주소입니다. 다시 확인해 주세요."
+
+#: src/contexts/Tip/useRecipientValidate.ts:31
+msgid "The receiving address may be a malicious address."
+msgstr "받는 주소는 악의적인 주소일 수 있습니다."
+
+#: src/components/TipDialog.tsx:144
+#: src/components/TipDialog.tsx:176
+msgid "Tips"
+msgstr "팁"
+
+#: src/components/RecipientSection/index.tsx:46
+msgid "To"
+msgstr "받는 사람"
+
+#: src/components/TipDialog.tsx:179
+msgid "Tokens"
+msgstr "토큰"
+
+#: src/components/RecipientSection/RecipientSelect.tsx:130
+msgid "View on Explorer"
+msgstr "Explorer에서 보기"
