--- a/packages/plugins/Tips/src/locale/zh-CN.po
+++ b/packages/plugins/Tips/src/locale/zh-CN.po
@@ -17,3 +17,72 @@ msgstr ""
 "X-Crowdin-Language: zh-CN\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/Tips/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 998\n"
+
+#: src/components/NFTSection/index.tsx:160
+msgid "Add Collectibles"
+msgstr "添加 NFT"
+
+#: src/SiteAdaptor/components/TipsRealmContent/index.tsx:106
+msgid "Close"
+msgstr "关闭"
+
+#: src/contexts/Tip/useTipValidate.ts:42
+msgid "Insufficient balance"
+msgstr "余额不足"
+
+#: src/components/TipDialog.tsx:180
+msgid "NFTs"
+msgstr "NFTs"
+
+#: src/components/NFTSection/index.tsx:207
+msgid "No any collectible is available to preview. Please add your collectible here."
+msgstr "没有任何可预览的收藏品。请在这里添加您的收藏品。"
+
+#: src/contexts/Tip/useTipValidate.ts:38
+msgid "No Enough Gas Fees"
+msgstr "没有足够的 Gas 费"
+
+#: src/components/TipDialog.tsx:126
+msgid "Send"
+msgstr "发送"
+
+#: src/SiteAdaptor/components/TipsRealmContent/index.tsx:105
+msgid "Send authors tips by using Mask Network’s Tips function."
+msgstr "使用Mask Newwork发送小费给作者。"
+
+#: src/components/TipDialog.tsx:125
+msgid "Sending..."
+msgstr "发送中..."
+
+#: src/components/TipDialog.tsx:142
+msgid "Sent {1} {0} tips successfully."
+msgstr "已成功发送 {0} {1} 小费。"
+
+#: src/components/TipDialog.tsx:143
+msgid "Sent {amount} {0} tips successfully."
+msgstr ""
+
+#: src/contexts/Tip/useRecipientValidate.ts:30
+msgid "The receiving address is a contract address. Please check again."
+msgstr "此接收地址为合约地址，请重新检查。"
+
+#: src/contexts/Tip/useRecipientValidate.ts:31
+msgid "The receiving address may be a malicious address."
+msgstr "接收地址可能是恶意地址。"
+
+#: src/components/TipDialog.tsx:144
+#: src/components/TipDialog.tsx:176
+msgid "Tips"
+msgstr "小费"
+
+#: src/components/RecipientSection/index.tsx:46
+msgid "To"
+msgstr "发送至"
+
+#: src/components/TipDialog.tsx:179
+msgid "Tokens"
+msgstr "Tokens"
+
+#: src/components/RecipientSection/RecipientSelect.tsx:130
+msgid "View on Explorer"
+msgstr "在区块链浏览器查看"
