refactor: migrate plugin Transak

--- a/packages/plugins/Transak/src/locale/ja-JP.json
+++ b/packages/plugins/Transak/src/locale/ja-JP.json
@@ -1,1 +1,6 @@
-{ "messages": {} }
+{
+    "messages": {
+        "Yckw2R": "フィアット・オンランプ",
+        "VuEDVi": "Twitterでフィアットオンランプアグリゲーター。Transakサポートで60以上の国で暗号通貨を購入。"
+    }
+}
