--- a/packages/plugins/Transak/src/locale/en-US.json
+++ b/packages/plugins/Transak/src/locale/en-US.json
@@ -1,1 +1,6 @@
-{ "messages": {} }
+{
+    "messages": {
+        "Yckw2R": "Fiat On-Ramp",
+        "VuEDVi": "Fiat On-Ramp Aggregator on Twitter. Buy crypto in 60+ countries with Transak support."
+    }
+}
