--- a/packages/plugins/Transak/src/locale/ja-JP.po
+++ b/packages/plugins/Transak/src/locale/ja-JP.po
@@ -17,3 +17,11 @@ msgstr ""
 "X-Crowdin-Language: ja\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/Transak/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 1002\n"
+
+#: src/SiteAdaptor/index.tsx:16
+msgid "Fiat On-Ramp"
+msgstr "フィアット・オンランプ"
+
+#: src/SiteAdaptor/index.tsx:42
+msgid "Fiat On-Ramp Aggregator on Twitter. Buy crypto in 60+ countries with Transak support."
+msgstr "Twitterでフィアットオンランプアグリゲーター。Transakサポートで60以上の国で暗号通貨を購入。"
