--- a/packages/plugins/Trader/src/locale/en-US.json
+++ b/packages/plugins/Trader/src/locale/en-US.json
@@ -11,6 +11,10 @@
         "/hKQcr": [["seconds"], "s"],
         "RuO5md": [["seconds"], "sec"],
         "s3+dHe": "<0>Powered by<1/></0><2>OKX</2>",
+        "yQqkIK": "24H Average Price",
+        "YW51YO": "24H sale",
+        "Kzu9r9": "24H Traded Volume",
+        "39ohdf": "Activities",
         "BmN4Bk": "Aggregator",
         "j2Uisd": "Approving",
         "3uQmjD": "Average",
@@ -18,6 +22,7 @@
         "J24FyN": "Bridge",
         "O3Nzf+": "Bridge between this token pair are't supported at the moment.",
         "sX4+FS": "Bridge network fee",
+        "m2pyX2": "Buy Now",
         "aqop4L": "Check on Explorer",
         "rulocO": "Checking Approve",
         "bD8I7O": "Complete",
@@ -35,24 +40,40 @@
         "7Bj3x9": "Failed",
         "KziH2K": "Fast",
         "pG7O41": "Fastest",
+        "ah8/4v": "Floor Price",
         "ejVYRQ": "From",
         "3kbpgO": "Gas Limit",
         "OLY2Jk": "Gas Price",
+        "Weq9zb": "General",
+        "ZTmzRV": "Highest Price",
         "0caMy7": "History",
         "lqW7eD": "In cross-chain transactions, this fee includes the estimated network fee and the cross-chain bridge's network fee which is $0.00 (0 OP_ETH). The network fees are paid to the miners and aren't charged by our platform.\nThe actual cost may be lower\nthan estimated, and any unused funds will remain in the original address.",
         "m3pz1u": ["Insufficient ", ["symbol"], " Balance"],
+        "BzfzPK": "Items",
+        "0Lp4o6": "Load failed",
+        "yQE2r9": "Loading",
+        "5N3b5J": "Market Cap",
         "RhCL4z": "Max amount",
         "T3EPqL": "Max base fee",
+        "fiPesM": "Method",
         "HTX2HV": "Minimum received",
         "OR475H": "Network",
         "y62Dys": "Network fee",
+        "zJlXbX": "NFT",
+        "8Dh77Z": "NFTs",
+        "B6C0XJ": "No Data",
         "ileX7U": "No recent transactions",
         "lO/vMB": "OKX DEX refers to the OKX DEX aggregator, which chooses the best route to place an order through all integrated third-party DEXs (some of them are shown below).  Note that OKX DEX derives all its liquidity from third-party liquidity pools. OKX DEX does NOT conduct any transactions directly.",
+        "1TNIig": "Open",
+        "CYRJEX": "Owners",
+        "AxdOHo": "Pair",
         "g2UNkE": "Powered by",
+        "a7u1N9": "Price",
         "y/kxxM": "Priority fee",
         "T3dlAs": "Quote expired. Update to receive a new quote.",
         "F4Igxz": "Quote route",
         "82+n6o": "Quote Route",
+        "1EOhmY": ["Rank #", ["0"]],
         "fqDzSu": "Rate",
         "Rx8sxX": "Select liquidity",
         "LSwUJb": "Select Liquidity",
@@ -68,7 +89,9 @@
         "bTQliy": "This fee is used to pay miners and isn't collected by us. The actual cost may be less than estimated, and the unused fee won't be deducted from your account.",
         "Tl3Zls": "This is the price difference between the DEX with the highest composite price and other DEXs, which factors in the estimated received amount and network fee.",
         "rqV4QH": "This swap isn’t supported",
+        "LhMjLm": "Time",
         "/jQctM": "To",
+        "rZ0rgl": "Total Volume",
         "iF9x7r": "Trading mode",
         "0fljZe": "Trading Route",
         "5HVoyc": "Transaction Details",
@@ -77,6 +100,9 @@
         "g/i+bG": "Transaction rejected",
         "Re7Oex": "Transaction submitted.",
         "cFDjd3": "Transaction type",
-        "XcWehA": "Update Quote"
+        "XcWehA": "Update Quote",
+        "+b7T3G": "Updated",
+        "wMHvYH": "Value",
+        "Fn9Tvh": "Volume (24h)"
     }
 }
