--- a/packages/plugins/Trader/src/locale/ja-JP.json
+++ b/packages/plugins/Trader/src/locale/ja-JP.json
@@ -11,48 +11,69 @@
         "/hKQcr": [["seconds"], "s"],
         "RuO5md": [["seconds"], "sec"],
         "s3+dHe": "<0>Powered by<1/></0><2>OKX</2>",
+        "yQqkIK": "24時間平均価格",
+        "YW51YO": "24時間売上",
+        "Kzu9r9": "24時間の取引量",
+        "39ohdf": "アクティビティ",
         "BmN4Bk": "Aggregator",
         "j2Uisd": "Approving",
         "3uQmjD": "Average",
         "z7Fh2l": ["Base fee required: ", ["MIN_BASE_FEE"], " Gwei"],
-        "J24FyN": "Bridge",
+        "J24FyN": "ブリッジ",
         "O3Nzf+": "Bridge between this token pair are't supported at the moment.",
         "sX4+FS": "Bridge network fee",
+        "m2pyX2": "今すぐ購入",
         "aqop4L": "Check on Explorer",
         "rulocO": "Checking Approve",
         "bD8I7O": "Complete",
         "7VpPHA": "Confirm",
         "Tuc34V": "Confirm Bridge",
         "lQ6r7x": "Confirm swap",
-        "tbOs8j": "Confirm Swap",
+        "tbOs8j": "スワップを確認",
         "Xcy5sJ": "Cross-chain Swap",
-        "8Tg/JR": "Custom",
+        "8Tg/JR": "カスタム",
         "HKH+W+": "Data",
         "mYGY3B": "Date",
         "ctb8Cs": ["Dex/Est received (", ["0"], ")"],
         "kPQQEW": "Enter an Amount",
-        "Citz6F": "Exchange",
-        "7Bj3x9": "Failed",
-        "KziH2K": "Fast",
+        "Citz6F": "取引所",
+        "7Bj3x9": "失敗しました",
+        "KziH2K": "高速",
         "pG7O41": "Fastest",
-        "ejVYRQ": "From",
+        "ah8/4v": "フロア価格",
+        "ejVYRQ": "から",
         "3kbpgO": "Gas Limit",
         "OLY2Jk": "Gas Price",
+        "Weq9zb": "一般",
+        "ZTmzRV": "最高価格",
         "0caMy7": "History",
         "lqW7eD": "In cross-chain transactions, this fee includes the estimated network fee and the cross-chain bridge's network fee which is $0.00 (0 OP_ETH). The network fees are paid to the miners and aren't charged by our platform.\nThe actual cost may be lower\nthan estimated, and any unused funds will remain in the original address.",
         "m3pz1u": ["Insufficient ", ["symbol"], " Balance"],
+        "BzfzPK": "アイテム",
+        "0Lp4o6": "読み込み失敗",
+        "yQE2r9": "読み込み中",
+        "5N3b5J": "時価総額",
         "RhCL4z": "Max amount",
         "T3EPqL": "Max base fee",
+        "fiPesM": "方法",
         "HTX2HV": "Minimum received",
         "OR475H": "Network",
         "y62Dys": "Network fee",
+        "zJlXbX": "NFT",
+        "8Dh77Z": "NFTs",
+        "B6C0XJ": "データなし",
         "ileX7U": "No recent transactions",
         "lO/vMB": "OKX DEX refers to the OKX DEX aggregator, which chooses the best route to place an order through all integrated third-party DEXs (some of them are shown below).  Note that OKX DEX derives all its liquidity from third-party liquidity pools. OKX DEX does NOT conduct any transactions directly.",
-        "g2UNkE": "Powered by",
+        "1TNIig": "オープン",
+        "CYRJEX": "所有者",
+        "AxdOHo": "ペア ",
+        "g2UNkE": "以下により提供されています",
+        "a7u1N9": "価格",
         "y/kxxM": "Priority fee",
         "T3dlAs": "Quote expired. Update to receive a new quote.",
         "F4Igxz": "Quote route",
         "82+n6o": "Quote Route",
+        "1EOhmY": ["Rank #", ["0"]],
         "fqDzSu": "Rate",
         "Rx8sxX": "Select liquidity",
         "LSwUJb": "Select Liquidity",
@@ -60,7 +81,7 @@
         "QsVbHo": "Sending address",
         "CMHmbm": "Slippage",
         "SYgxDf": "Slow",
-        "vH2C/2": "Swap",
+        "vH2C/2": "スワップ",
         "+q+Wa9": "Swap anyway",
         "m64f3d": "Swaps between this token pair are’t supported at the moment. You can try with third-party DApps instead.",
         "Q0IFtx": "The custom amount entered may be higher than the required network fee.",
@@ -68,7 +89,9 @@
         "bTQliy": "This fee is used to pay miners and isn't collected by us. The actual cost may be less than estimated, and the unused fee won't be deducted from your account.",
         "Tl3Zls": "This is the price difference between the DEX with the highest composite price and other DEXs, which factors in the estimated received amount and network fee.",
         "rqV4QH": "This swap isn’t supported",
-        "/jQctM": "To",
+        "LhMjLm": "時刻",
+        "/jQctM": "宛先",
+        "rZ0rgl": "合計量",
         "iF9x7r": "Trading mode",
         "0fljZe": "Trading Route",
         "5HVoyc": "Transaction Details",
@@ -77,6 +100,9 @@
         "g/i+bG": "Transaction rejected",
         "Re7Oex": "Transaction submitted.",
         "cFDjd3": "Transaction type",
-        "XcWehA": "Update Quote"
+        "XcWehA": "Update Quote",
+        "+b7T3G": "更新済",
+        "wMHvYH": "価値",
+        "Fn9Tvh": "数量(24時間)"
     }
 }
