--- a/packages/plugins/Trader/src/locale/zh-CN.json
+++ b/packages/plugins/Trader/src/locale/zh-CN.json
@@ -11,6 +11,10 @@
         "/hKQcr": [["seconds"], "s"],
         "RuO5md": [["seconds"], "sec"],
         "s3+dHe": "<0>Powered by<1/></0><2>OKX</2>",
+        "yQqkIK": "24H平均价格",
+        "YW51YO": "24小时销售",
+        "Kzu9r9": "24H 交易量",
+        "39ohdf": "活动",
         "BmN4Bk": "Aggregator",
         "j2Uisd": "Approving",
         "3uQmjD": "Average",
@@ -18,41 +22,58 @@
         "J24FyN": "Bridge",
         "O3Nzf+": "Bridge between this token pair are't supported at the moment.",
         "sX4+FS": "Bridge network fee",
+        "m2pyX2": "立即购买",
         "aqop4L": "Check on Explorer",
         "rulocO": "Checking Approve",
         "bD8I7O": "Complete",
         "7VpPHA": "Confirm",
         "Tuc34V": "Confirm Bridge",
         "lQ6r7x": "Confirm swap",
-        "tbOs8j": "Confirm Swap",
+        "tbOs8j": "确认兑换",
         "Xcy5sJ": "Cross-chain Swap",
-        "8Tg/JR": "Custom",
+        "8Tg/JR": "自定义",
         "HKH+W+": "Data",
         "mYGY3B": "Date",
         "ctb8Cs": ["Dex/Est received (", ["0"], ")"],
         "kPQQEW": "Enter an Amount",
-        "Citz6F": "Exchange",
-        "7Bj3x9": "Failed",
-        "KziH2K": "Fast",
+        "Citz6F": "兑换",
+        "7Bj3x9": "失败",
+        "KziH2K": "快速",
         "pG7O41": "Fastest",
-        "ejVYRQ": "From",
+        "ah8/4v": "地板价",
+        "ejVYRQ": "从",
         "3kbpgO": "Gas Limit",
         "OLY2Jk": "Gas Price",
+        "Weq9zb": "概况",
+        "ZTmzRV": "最高价格",
         "0caMy7": "History",
         "lqW7eD": "In cross-chain transactions, this fee includes the estimated network fee and the cross-chain bridge's network fee which is $0.00 (0 OP_ETH). The network fees are paid to the miners and aren't charged by our platform.\nThe actual cost may be lower\nthan estimated, and any unused funds will remain in the original address.",
         "m3pz1u": ["Insufficient ", ["symbol"], " Balance"],
+        "BzfzPK": "条目",
+        "0Lp4o6": "加载失败",
+        "yQE2r9": "加载中",
+        "5N3b5J": "市值",
         "RhCL4z": "Max amount",
         "T3EPqL": "Max base fee",
+        "fiPesM": "操作",
         "HTX2HV": "Minimum received",
         "OR475H": "Network",
         "y62Dys": "Network fee",
+        "zJlXbX": "NFT",
+        "8Dh77Z": "NFTs",
+        "B6C0XJ": "暂无数据",
         "ileX7U": "No recent transactions",
         "lO/vMB": "OKX DEX refers to the OKX DEX aggregator, which chooses the best route to place an order through all integrated third-party DEXs (some of them are shown below).  Note that OKX DEX derives all its liquidity from third-party liquidity pools. OKX DEX does NOT conduct any transactions directly.",
+        "1TNIig": "打开",
+        "CYRJEX": "拥有者",
+        "AxdOHo": "交易对",
         "g2UNkE": "Powered by",
+        "a7u1N9": "价格",
         "y/kxxM": "Priority fee",
         "T3dlAs": "Quote expired. Update to receive a new quote.",
         "F4Igxz": "Quote route",
         "82+n6o": "Quote Route",
+        "1EOhmY": ["Rank #", ["0"]],
         "fqDzSu": "Rate",
         "Rx8sxX": "Select liquidity",
         "LSwUJb": "Select Liquidity",
@@ -60,7 +81,7 @@
         "QsVbHo": "Sending address",
         "CMHmbm": "Slippage",
         "SYgxDf": "Slow",
-        "vH2C/2": "Swap",
+        "vH2C/2": "兑换",
         "+q+Wa9": "Swap anyway",
         "m64f3d": "Swaps between this token pair are’t supported at the moment. You can try with third-party DApps instead.",
         "Q0IFtx": "The custom amount entered may be higher than the required network fee.",
@@ -68,7 +89,9 @@
         "bTQliy": "This fee is used to pay miners and isn't collected by us. The actual cost may be less than estimated, and the unused fee won't be deducted from your account.",
         "Tl3Zls": "This is the price difference between the DEX with the highest composite price and other DEXs, which factors in the estimated received amount and network fee.",
         "rqV4QH": "This swap isn’t supported",
-        "/jQctM": "To",
+        "LhMjLm": "时间",
+        "/jQctM": "至",
+        "rZ0rgl": "成交量",
         "iF9x7r": "Trading mode",
         "0fljZe": "Trading Route",
         "5HVoyc": "Transaction Details",
@@ -77,6 +100,9 @@
         "g/i+bG": "Transaction rejected",
         "Re7Oex": "Transaction submitted.",
         "cFDjd3": "Transaction type",
-        "XcWehA": "Update Quote"
+        "XcWehA": "Update Quote",
+        "+b7T3G": "已更新",
+        "wMHvYH": "价值",
+        "Fn9Tvh": "交易量 (24h)"
     }
 }
