refactor: migrate plugin VCent

--- a/packages/plugins/VCent/src/locale/ja-JP.json
+++ b/packages/plugins/VCent/src/locale/ja-JP.json
@@ -1,1 +1,8 @@
-{ "messages": {} }
+{
+    "messages": {
+        "muQqQY": "オリジナルクリエイターのサイン入りツイートを購入・販売。",
+        "4pSxwB": "実行",
+        "6vH9MS": "最新のオファー:",
+        "N0YrmD": "貴重な"
+    }
+}
