--- a/packages/plugins/VCent/src/locale/en-US.json
+++ b/packages/plugins/VCent/src/locale/en-US.json
@@ -1,1 +1,8 @@
-{ "messages": {} }
+{
+    "messages": {
+        "muQqQY": "Buy & sell tweets autographed by their original creators.",
+        "4pSxwB": "Go",
+        "6vH9MS": "Latest offer at",
+        "N0YrmD": "Valuables"
+    }
+}
