--- a/packages/plugins/VCent/src/locale/ja-JP.po
+++ b/packages/plugins/VCent/src/locale/ja-JP.po
@@ -17,3 +17,20 @@ msgstr ""
 "X-Crowdin-Language: ja\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/VCent/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 1004\n"
+
+#: src/SiteAdaptor/index.tsx:18
+msgid "Buy & sell tweets autographed by their original creators."
+msgstr "オリジナルクリエイターのサイン入りツイートを購入・販売。"
+
+#: src/SiteAdaptor/TweetDialog.tsx:91
+msgid "Go"
+msgstr "実行"
+
+#: src/SiteAdaptor/TweetDialog.tsx:79
+msgid "Latest offer at"
+msgstr "最新のオファー:"
+
+#: src/SiteAdaptor/index.tsx:17
+#: src/SiteAdaptor/index.tsx:32
+msgid "Valuables"
+msgstr "貴重な"
