--- a/packages/plugins/VCent/src/locale/ko-KR.po
+++ b/packages/plugins/VCent/src/locale/ko-KR.po
@@ -17,3 +17,20 @@ msgstr ""
 "X-Crowdin-Language: ko\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/VCent/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 1004\n"
+
+#: src/SiteAdaptor/index.tsx:18
+msgid "Buy & sell tweets autographed by their original creators."
+msgstr "크리에이터가 서명한 트윗을 구입 및 판매하기"
+
+#: src/SiteAdaptor/TweetDialog.tsx:91
+msgid "Go"
+msgstr "Go"
+
+#: src/SiteAdaptor/TweetDialog.tsx:79
+msgid "Latest offer at"
+msgstr "최신 오퍼"
+
+#: src/SiteAdaptor/index.tsx:17
+#: src/SiteAdaptor/index.tsx:32
+msgid "Valuables"
+msgstr "가치"
