--- a/packages/plugins/VCent/src/locale/zh-CN.json
+++ b/packages/plugins/VCent/src/locale/zh-CN.json
@@ -1,1 +1,8 @@
-{ "messages": {} }
+{
+    "messages": {
+        "muQqQY": "购买和销售由其原创作者发布的推文。",
+        "4pSxwB": "开始",
+        "6vH9MS": "最新报价",
+        "N0YrmD": "贵重物品"
+    }
+}
