--- a/packages/plugins/SmartPay/src/locales/zh-CN.json
+++ b/packages/plugins/SmartPay/src/locales/zh-CN.json
@@ -14,7 +14,7 @@
     "create_a_new_persona_desc": "在弹出窗口中创建新身份。",
     "create_successfully": "创建成功！",
     "create_smart_pay_wallet": "创建 SmartPay 钱包",
-    "created_smart_pay_wallet_description": "在 Ploygon 网络上创建了一个 SmartPay 钱包。",
+    "created_smart_pay_wallet_description": "在 Polygon 网络上创建了一个 SmartPay 钱包。",
     "create_successfully_tips": "恭喜您! 您已成功创建了 SmartPay 钱包 {{address}}。",
     "create_successfully_tips_owner": "SmartPay 钱包的管理账户是 {{owner}}。",
     "can_only_receive_polygon_assets": "只能接收 Polygon 网络的资产。",
