--- a/packages/plugins/Tips/src/locale/zh-TW.json
+++ b/packages/plugins/Tips/src/locale/zh-TW.json
@@ -7,7 +7,7 @@
         "4kYy+U": "没有任何可预览的收藏品。请在这里添加您的收藏品。",
         "CMfM6C": "没有足够的 Gas 费",
         "JlFcis": "发送",
-        "7ee72/": "使用Mask Newwork发送小费给作者。",
+        "7ee72/": "使用Mask Network发送小费给作者。",
         "IoAuJG": "发送中...",
         "+E4pMq": ["已成功发送 ", ["0"], " ", ["1"], " 小费。"],
         "FOu1+K": ["Sent ", ["amount"], " ", ["0"], " tips successfully."],
