--- a/packages/plugins/Web3Profile/src/locale/zh-TW.json
+++ b/packages/plugins/Web3Profile/src/locale/zh-TW.json
@@ -24,7 +24,7 @@
         "GwemLM": "保存成功",
         "ZKAj6+": "设置钱包，在每个社交媒体帐户上显示 Web3 足迹和打赏地址。",
         "jl7yZQ": "成功设置 Web3 个人资料钱包。",
-        "CpciBt": "切换到 Ploygon 并关注",
+        "CpciBt": "切换到 Polygon 并关注",
         "IUp08P": "当前钱包没有 Lens ，无法关注/取消关注",
         "nV/wXH": "此个人信息不能被关注。",
         "/jZSwf": "此用户已禁止关注功能。",
