--- a/packages/plugins/Trader/src/locale/ja-JP.json
+++ b/packages/plugins/Trader/src/locale/ja-JP.json
@@ -16,6 +16,7 @@
         "3uQmjD": "Average",
         "z7Fh2l": ["Base fee required: ", ["MIN_BASE_FEE"], " Gwei"],
         "J24FyN": "Bridge",
+        "bLmWH9": "Bridge anyway",
         "O3Nzf+": "Bridge between this token pair are't supported at the moment.",
         "sX4+FS": "Bridge network fee",
         "aqop4L": "Check on Explorer",
