fix: run codegen

--- a/packages/plugins/Snapshot/src/locale/en-US.json
+++ b/packages/plugins/Snapshot/src/locale/en-US.json
@@ -1,5 +1,6 @@
 {
     "messages": {
+        "jXWnN0": [["0", "plural", { "one": "Strategy", "other": "Strategies" }]],
         "0jddIP": [["0"], " members"],
         "VbeIOx": "Author",
         "gxV9O8": "Cast your vote",
