--- a/packages/plugins/Snapshot/src/locale/ja-JP.json
+++ b/packages/plugins/Snapshot/src/locale/ja-JP.json
@@ -1,5 +1,6 @@
 {
     "messages": {
+        "jXWnN0": [["0", "plural", { "one": "Strategy", "other": "Strategies" }]],
         "0jddIP": [["0"], " メンバー"],
         "VbeIOx": "著者",
         "gxV9O8": "投票してください",
