--- a/packages/plugins/Snapshot/src/locale/ko-KR.json
+++ b/packages/plugins/Snapshot/src/locale/ko-KR.json
@@ -1,5 +1,6 @@
 {
     "messages": {
+        "jXWnN0": [["0", "plural", { "one": "Strategy", "other": "Strategies" }]],
         "0jddIP": [["0"], " 맴버"],
         "VbeIOx": "작성자",
         "gxV9O8": "투표하세요.",
