--- a/packages/plugins/Snapshot/src/locale/zh-TW.json
+++ b/packages/plugins/Snapshot/src/locale/zh-TW.json
@@ -1,5 +1,6 @@
 {
     "messages": {
+        "jXWnN0": [["0", "plural", { "one": "Strategy", "other": "Strategies" }]],
         "0jddIP": [["0"], " 位成员"],
         "VbeIOx": "作者",
         "gxV9O8": "投出您的票",
